# SystemsOfNumericalEquationsSolver-SONES

./: .gitignore  .project  CMakeLists.txt  SystemsOfNumericalEquationsSolver.fpj  SystemsOfNumericalEquationsSolver.layout  main.cpp
headers/: matrix.h  menu.h  option.h  parser.h  solver.h  tools.h
sources/: main.cpp  matrix.cpp  menu.cpp  option.cpp  parser.cpp  solver.cpp  tools.cpp
src/core/: Converter.java  Matrix.java  Polynominal.java  Program.java  ProgramException.java  Solver.java  Tools.java
src/normalnaNazwa/: CalculatingDeterminantOfAMatrix.java  FindingAZeroPositionUsingIncisalMethod.java  FindingAZeroPositionUsingNewtonMethod.java  NormalnaNazwa.java  UsingTrapeziodsToCalculateAreaOfIntegrate.java
src/numericMethod/: CalculatingDeterminantOfAMatrix.java  CalculatingPolynominalIntegralUsingTrapeziods.java  CalculatingTheDeterminantOfAMatrix.java  FindingAZeroPositionUsingIncisalMethod.java  FindingAZeroPositionUsingNewtonMethod.java  NumericalMethod.java  SolvingASystemOfNumericalEquations.java  UsingTrapeziodsToCalculateAreaOfIntegrate.java
